#F-208 In Progress Refactoring Inverseable classes